--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nodemon": "^1.17.5",
     "smee-client": "^1.0.1",
     "standard": "^11.0.1"
-  }
+  },
+  "engines": {
+    "node": ">= 8.3.0"
+  },
 }
